--- a/less/index.less
+++ b/less/index.less
@@ -294,21 +294,25 @@ table {
 
          .listItems {
              p {
+                 
                 width: 100%;
-                height: 80%;
-                 margin: 10px 10px;
-                display: flex;;
-                align-items: center;
+                text-align: center;
+                // height: 80%;
+                //  margin: 10px 20px;
+                // display: flex;
+                // align-items: center;
                 font-size: 30px;
                 color: #FFFDF5;
              }
          }
         ul {
             li {
-                width: 25%;
+                width: 100%;
+                padding: 10px;
                 height: 80%;
-                 margin: 10px 10px;
-                display: flex;;
+                 margin: 20px 10px;
+                display: flex;
+                justify-content: space-around;
                 align-items: center;
                 font-size: 30px;
                 color: #FFFDF5;
@@ -317,17 +321,25 @@ table {
         .teamwork {
             img {
                 margin-top: 13px;
+                margin: 0 auto;
                 width: 30%;
                 height: 40%;
+                display: flex;
+                justify-content: space-around;
+                align-items: center
             }
             h4 {
-                width: 25%;
-                height: 80%;
-                 margin: 10px 10px;
-                display: flex;;
+                width: 100%;
+                padding: 10px;
+                 margin: 20px 10px;
+                display: flex;
+                justify-content: space-around;
                 align-items: center;
                 font-size: 30px;
-                color: #FFFDF5;
+                 a{
+                    text-decoration: underline;
+                    color: #FFFDF5;
+                 }
             }
         }
 
